# cli-helper

./: .gitignore  BSCLI_DESIGN.md  BSCLI_DESIGN_ZH.md  README.md  agent-oriented-legacy-bs-adaptation-design.md  deferred-considerations.md  poc-validation-plan.md  pyproject.toml
bscli/: __init__.py
docs/: agent-interaction-protocol.md  current-deployment-plan.md  development-and-release-workflow.md  development-policy.md  legacy-bridge-retirement.md  oa-matter-matrix.md  oa-write-action-expansion-playbook.md  oa-write-discovery.md  oa-write-safety.md  openclaw-multi-user-identity-routing.md  remote-mcp-onboarding.md
extension/: background.js  content.js  manifest.json
scripts/: Deploy-AgentBridge.ps1  Invoke-AgentBridgeValidation.ps1  Test-AgentBridgeMcp.ps1  agentbridge-mcp-smoke.mjs  inspect_oa_template_contract.py  validate_oa_pending_actions_preflight.py  validate_oa_write_preflight.py
tests/: test_action_card.py  test_agentbridge_core.py  test_api_candidates.py  test_api_inspection.py  test_auth_card.py  test_auth_challenges.py  test_auth_server.py  test_bridge_retirement.py  test_central_browser.py  test_central_cli.py  test_central_mcp.py  test_central_mcp_cli.py  test_central_service.py  test_cli_bridge.py  test_cli_command_run.py  test_cli_daemon_status.py  test_cli_discovered.py  test_cli_oa.py  test_core.py  test_credential_broker.py  test_daemon.py  test_daemon_security.py  test_deployment_assets.py  test_discovered_store.py  test_extension_files.py  test_field_card.py  test_field_submissions.py  test_interactions.py  test_internal_pki.py  (+22 more)
(+98 files in other folders)
